# study-of-functional-programming

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  book.toml  content-structure.md
content/: 00_intro.md  01_basics.md  02_immutability.md  03_closures.md  04_iterators.md  05_adt.md  06_error_handling.md  07_composition.md  08_traits.md  09_practice.md  10_recursion.md  11_concurrency.md  12_type_state.md  13_project.md  14_oop_vs_fp.md  15_lenses.md  17_free_monad.md  (+5 more)
crate/: Cargo.toml
crate/01_basics/src/: lib.rs
crate/02_immutability/: Cargo.toml
crate/02_immutability/src/: lib.rs
crate/03_closures/src/: lib.rs
crate/04_iterators/: Cargo.toml
crate/04_iterators/src/: lib.rs
crate/05_adt/: Cargo.toml
crate/05_adt/src/: lib.rs
crate/06_error_handling/: Cargo.toml
crate/06_error_handling/src/: lib.rs
crate/07_composition/: Cargo.toml
crate/07_composition/src/: lib.rs
crate/08_traits/src/: lib.rs
crate/09_practice/src/: lib.rs
crate/10_recursion/src/: lib.rs
crate/11_concurrency/src/: lib.rs
crate/12_type_state/: Cargo.toml
crate/12_type_state/src/: lib.rs
crate/13_project/: Cargo.toml
crate/13_project/src/: lib.rs
crate/14_oop_vs_fp/: Cargo.toml
crate/14_oop_vs_fp/src/: lib.rs
crate/15_lenses/: Cargo.toml
crate/15_lenses/src/: lib.rs
crate/16_monad_transformer/: Cargo.toml
crate/16_monad_transformer/src/: lib.rs
crate/17_free_monad/: Cargo.toml
crate/17_free_monad/src/: lib.rs
crate/18_effect_system/: Cargo.toml
crate/18_effect_system/src/: lib.rs
crate/19_stream/: Cargo.toml
crate/19_stream/src/: lib.rs
(+32 files in other folders)
