[workspace]
members = ["01_basics", "02_immutability", "03_closures", "04_iterators", "05_adt", "06_error_handling", "07_composition", "08_traits", "09_practice", "10_recursion", "11_concurrency", "12_type_state", "13_project", "14_oop_vs_fp", "15_lenses", "16_monad_transformer", "17_free_monad", "18_effect_system", "19_stream"]
resolver = "2"
